# API

./: .gitignore  GnssMetadata.sln  README.md  Updated License header.txt
app/: CMakeLists.txt
app/TestApp/: TestApp.cpp
app/TestAppIfenConvert/: CMakeLists.txt  TestAppIfenConvert.cpp  TestAppIfenConvert.vcxproj.filters
design/uml/: GnssMetadataApiModel.mdzip
include/GnssMetadata/: AnyUri.h  AttributedObject.h  Band.h  BaseTypes.h  Block.h  CMakeLists.txt  Chunk.h  Cluster.h  Comment.h  Date.h  Duration.h  File.h  Frequency.h  Lane.h  Location.h  Lump.h  Metadata.h  Position.h  Session.h  Source.h  Stream.h  System.h
include/GnssMetadata/Xml/: CMakeLists.txt  Context.h  Translator.h  XmlProcessor.h
lib/GnssMetadata/: AnyUri.cpp  AttributedObject.cpp  Band.cpp  BaseTypes.cpp  Block.cpp  CMakeLists.txt  Chunk.cpp  Cluster.cpp  Comment.cpp  Date.cpp  Duration.cpp  File.cpp  Frame.cpp  Frequency.cpp  GnssMetadata.vcproj  Lane.cpp  Location.cpp  Lump.cpp  Metadata.cpp  Position.cpp  Session.cpp  Source.cpp  Stream.cpp  SubFrame.cpp  System.cpp
lib/GnssMetadata/Xml/: AnyUriTranslator.cpp  AnyUriTranslator.h  BandTranslator.cpp  BandTranslator.h  BlockTranslator.cpp  BlockTranslator.h  ChannelTranslator.cpp  ChunkTranslator.cpp  ChunkTranslator.h  ClusterTranslator.cpp  ClusterTranslator.h  DatafileTranslator.cpp  DurationTranslator.cpp  DurationTranslator.h  FileSetTranslator.cpp  FileSetTranslator.h  FileTranslator.cpp  FileTranslator.h  FrequencyTranslator.cpp  FrequencyTranslator.h  LaneTranslator.cpp  LaneTranslator.h  LumpTranslator.cpp  LumpTranslator.h  MetadataTranslator.cpp  MetadataTranslator.h  OscillatorTranslator.cpp  OscillatorTranslator.h  PositionTranslator.cpp  PositionTranslator.h  RfConfigTranslator.h  SessionTranslator.cpp  SessionTranslator.h  SourceTranslator.cpp  SourceTranslator.h  StreamTranslator.cpp  StreamTranslator.h  SystemTranslator.cpp  SystemTranslator.h  Translator.cpp  (+3 more)
